--- a/score-guesser.html
+++ b/score-guesser.html
@@ -8,6 +8,14 @@
     <title>Movie Game</title>
   </head>
   <body>
+    <header>
+      <button>Home</button>
+    </header>
+    <h2>Score:</h2>
+    <img alt="movie image" />
+    <input type="text" />
+    <button>Submit</button>
+    <div id="wiki-blurb"></div>
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
