added fetch request for score guesser game

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -12,9 +12,9 @@
       <button>Home</button>
     </header>
     <h2>Score:</h2>
-    <img alt="movie image" />
-    <input type="text" />
-    <button>Submit</button>
+    <img alt="movie image" id="movie-image" />
+    <input type="text" id="movie-name-input" />
+    <button id="submit">Submit</button>
     <div id="wiki-blurb"></div>
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
