added index html.

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -13,7 +13,7 @@
     </header>
     <h2>Score:</h2>
     <img alt="movie image" id="movie-image" />
-    <input type="text" id="movie-name-input" />
+    <input type="text" id="guess-input" />
     <button id="submit">Submit</button>
     <div id="wiki-blurb"></div>
     <script
