--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Margarine&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Movie Game</title>
+  </head>
 
     <body>
         <div class="columns is-vcentered">
