added functionality to start game button

--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
                     </a>
                 </div> 
             </div>            
-        </div>                
+        </div>  
+        <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script> 
+        <script src="./assets/script.js"></script>             
      </body>
+     </html>
