linked github buttons to profiles

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
         <div class="columns is-vcentered" >
             <div class="column">
                 <div id="shoutOuts" class="has-text-centered">
-                    <a href="#" id="casenButton" class="button is-rounded is-outlined is-success m-2">
+                    <a href="#" id="casenButton" class="button is-rounded is-outlined is-success m-2" onclick="casensButton()">
                         <span class="icon">
                         <i class="fab fa-github"></i>
                         </span>
                         <span>CSutherland</span> 
                     </a>
-                    <a href="#" id="jonButton" class="button is-rounded is-outlined is-success m-2">
+                    <a href="#" id="jonButton" class="button is-rounded is-outlined is-success m-2" onclick="jonsButton()">
                         <span class="icon">
                         <i class="fab fa-github"></i>
                         </span>
                         <span>JonGuhl</span>
                     </a>
-                    <a href="#" id="kippButton" class="button is-rounded is-outlined is-success m-2">
+                    <a href="#" id="kippButton" class="button is-rounded is-outlined is-success m-2" onclick="kippsButton()">
                         <span class="icon">
                         <i class="fab fa-github"></i>
                         </span>
                         <span>KCavner</span>
                     </a>
-                    <a href="#" id="jacobButton" class="button is-rounded is-outlined is-success m-2">
+                    <a href="#" id="jacobButton" class="button is-rounded is-outlined is-success m-2" onclick="jacobsButton()">
                         <span class="icon">
                         <i class="fab fa-github"></i>
                         </span>
