change elements to reflect data from fetch and current score

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -21,7 +21,7 @@
       </div>
       <div class="card-content">
         <div class="content">
-          Back To The Future 2 (1983)
+          <span class="movie-title"></span>
           <br>
           <br>
             <div class="columns is-gapless">
@@ -29,7 +29,7 @@
                 <input class="input is-success is-half" type="text" placeholder="Guess the review score">
               </div>
               <div class="row has-text-left">
-                <button class="button is-outlined is-success">Submit</button>
+                <button class="button is-outlined is-success submit">Submit</button>
                 <button class="button is-outlined is-info">More Info</button>
               </div>
             </div>
