added modal for score-screen and functionality to end game after 10 rounds

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -60,6 +60,20 @@
           <h3>Please enter valid percentage</h3>
         </div>
       </div>
+      <button
+        class="modal-close is-large invalid-modal-button"
+        aria-label="close"
+      ></button>
+    </div>
+    <div class="modal score-screen">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div>
+          <h3>Game Over</h3>
+          <h4 class="final-score"></h4>
+          <button class="play-again">Play Again</button>
+        </div>
+      </div>
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
     <script
