added modal for round result

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -75,6 +75,21 @@
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
+    <div class="modal round-result">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div>
+          <h3 class="actual-score"></h3>
+          <h3 class="difference"></h3>
+          <h3 class="points-awarded"></h3>
+          <button class="next-round">Next Round</button>
+        </div>
+      </div>
+      <button
+        class="modal-close is-large next-round"
+        aria-label="close"
+      ></button>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
