--- a/score-guesser.html
+++ b/score-guesser.html
@@ -33,6 +33,7 @@
         <div class="content">
           <span class="movie-title"></span>
           <br />
+        <div class="wikiParagraph"></div>
           <br />
           <div class="columns is-gapless">
             <div class="column">
