fixed wiki calls and added plotly greaph at the end of 5 movies

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/scoreguesser.css" />
+    <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
     <title>Movie Game</title>
   </head>
   <body>
@@ -71,6 +72,7 @@
         <div>
           <h3>Game Over</h3>
           <h4 class="final-score"></h4>
+          <div id="scorePlot"></div>
           <button class="play-again">Play Again</button>
         </div>
       </div>
