--- a/score-guesser.html
+++ b/score-guesser.html
@@ -4,100 +4,124 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="assets/scoreguesser.css" /> -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+      href="https://cdn.jsdelivr.net/npm/bulma-slider@2.0.4/dist/css/bulma-slider.min.css"
+      integrity="sha256-m9XwWtcTYNDofyHdPQfZTAgEhjQvM1/wQfU5TGqm2sk="
+      crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Margarine&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/scoreguesser.css" />
-    <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
     <title>Movie Game</title>
   </head>
+
+  <!-- top navigation -->
+  <nav class="breadcrumb is-centered has-bullet-separator is-medium" aria-label="breadcrumbs">
+    <ul>
+      <li>
+        <a href="index.html">
+          <span class="icon is-small">
+            <i class="fas fa-home" aria-hidden="true"></i>
+          </span>
+          <span>Home</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/jboyce313/movie-game">
+          <span class="icon is-small">
+            <i class="fa-brands fa-github"></i>
+          </span>
+          <span>GitHub</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-puzzle-piece" aria-hidden="true"></i>
+          </span>
+          <span>Share My Score</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
   <body>
-    <div class="card game-card">
-      <div class="card-image">
-        <div id="score">Score:</div>
-        <figure class="image is-4by5">
-          <img
-            id="moviePoster"
-            src="https://via.placeholder.com/800x600.png?text=Placeholder+Image"
-            alt="Placeholder Image"
-          />
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="content">
-          <span class="movie-title"></span>
-          <br />
-        <div class="wikiParagraph"></div>
-          <br />
-          <div class="columns is-gapless">
-            <div class="column">
-              <input
-                class="input is-success is-half"
-                type="text"
-                placeholder="Guess the review score"
-              />
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <!-- Movie Poster Card -->
+            <div class="card">
+              <div class="card-image">
+                <figure class="image is-2by3">
+                  <img src="https://m.media-amazon.com/images/M/MV5BMGE5NjJjNGMtZDkwMy00MGFlLWFkYTktYWFkNTY1NjcwOTY2XkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" alt="Placeholder image">
+                </figure>
+              </div>
             </div>
-            <div class="row has-text-left">
-              <button class="button is-outlined is-success submit">
-                Submit
-              </button>
-              <button class="button is-outlined is-info">More Info</button>
+          </div>
+          <div class="column is-8">
+            <!-- Scores, Info, and Submit Cards -->
+            <div class="card">
+              <div class="card-content">
+                <!-- Current Score -->
+                <p class="title">
+                  Current Score: 88
+                </p>
+                <!-- Highscore -->
+                <p class="subtitle is-3">
+                  Highscore: 97
+                </p>
+              </div>
             </div>
+
+            <div class="card my-5">
+              <div class="card-content">
+                <p class="title">
+                  Movie Title
+                </p>
+                <p class="subtitle">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>
+                    Read more on <a href="https://www.wikipedia.org/">Wikipedia</a>
+                  </span>
+                </p>
+              </footer>
+            </div>
+
+            <div class="card my-5">
+              <div class="card-content">
+                <p class="title">
+                  Guess the Score!
+                </p>
+                <!-- Score slider -->
+                <input id="sliderWithValue" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
+<output for="sliderWithValue">50</output>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <!-- Submit Button -->
+                  <button class="button is-danger is-outlined is-medium is-fullwidth">Submit</button>
+                </p>
+              </footer>
+            </div>
+          </div>
+            
           </div>
         </div>
       </div>
-    </div>
-    <div class="modal invalid-entry">
-      <div class="modal-background"></div>
-      <div class="modal-content">
-        <div>
-          <h3>Please enter valid percentage</h3>
-        </div>
-      </div>
-      <button
-        class="modal-close is-large invalid-modal-button"
-        aria-label="close"
-      ></button>
-    </div>
-    <div class="modal score-screen">
-      <div class="modal-background"></div>
-      <div class="modal-content">
-        <div>
-          <h3>Game Over</h3>
-          <h4 class="final-score"></h4>
-          <div id="scorePlot"></div>
-          <button class="play-again">Play Again</button>
-        </div>
-      </div>
-      <button class="modal-close is-large" aria-label="close"></button>
-    </div>
-    <div class="modal round-result">
-      <div class="modal-background"></div>
-      <div class="modal-content">
-        <div>
-          <h3 class="actual-score"></h3>
-          <h3 class="difference"></h3>
-          <h3 class="points-awarded"></h3>
-          <button class="next-round">Next Round</button>
-        </div>
-      </div>
-      <button
-        class="modal-close is-large next-round"
-        aria-label="close"
-      ></button>
-    </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
       crossorigin="anonymous"
     ></script>
     <script src="./assets/script.js"></script>
+    <!-- Fontawesome navbar logos -->
+    <script src="https://kit.fontawesome.com/54031de401.js" crossorigin="anonymous"></script>
   </body>
 </html>
