synced js with html

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -54,7 +54,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-2by3">
-                  <img src="https://m.media-amazon.com/images/M/MV5BMGE5NjJjNGMtZDkwMy00MGFlLWFkYTktYWFkNTY1NjcwOTY2XkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" alt="Placeholder image">
+                  <img class='movie-poster'src="" alt="Placeholder image">
                 </figure>
               </div>
             </div>
@@ -64,22 +64,22 @@
             <div class="card">
               <div class="card-content">
                 <!-- Current Score -->
-                <p class="title">
-                  Current Score: 88
+                <p class="title current-score">
+                  Current Score: 0
                 </p>
                 <!-- Highscore -->
-                <p class="subtitle is-3">
-                  Highscore: 97
+                <p class="subtitle is-3 previous-score">
+                  <!-- Highscore: 97 -->
                 </p>
               </div>
             </div>
 
             <div class="card my-5">
               <div class="card-content">
-                <p class="title">
+                <p class="title movie-title">
                   Movie Title
                 </p>
-                <p class="subtitle">
+                <p class="subtitle wikiParagraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
               </div>
@@ -99,12 +99,12 @@
                 </p>
                 <!-- Score slider -->
                 <input id="sliderWithValue" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
-<output for="sliderWithValue">50</output>
+<output class='guess' for="sliderWithValue">50</output>
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
                   <!-- Submit Button -->
-                  <button class="button is-danger is-outlined is-medium is-fullwidth">Submit</button>
+                  <button class="submit-btn button is-danger is-outlined is-medium is-fullwidth">Submit</button>
                 </p>
               </footer>
             </div>
