--- a/score-guesser.html
+++ b/score-guesser.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <!-- <link rel="stylesheet" href="assets/scoreguesser.css" /> -->
+    <link rel="stylesheet" href="assets/scoreguesser.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma-slider@2.0.4/dist/css/bulma-slider.min.css"
@@ -114,6 +114,19 @@
         </div>
       </div>
     </section>
+
+    <div class="modal score-screen">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div>
+          <h3>Game Over</h3>
+          <h4 class="final-score"></h4>
+          <div id="scorePlot"></div>
+          <button class="play-again">Play Again</button>
+        </div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
