got rid of erroneous code

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -12,6 +12,8 @@
       integrity="sha256-m9XwWtcTYNDofyHdPQfZTAgEhjQvM1/wQfU5TGqm2sk="
       crossorigin="anonymous"
     />
+    <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
+
     <title>Movie Game</title>
   </head>
 
@@ -125,7 +127,7 @@
           <button class="play-again">Play Again</button>
         </div>
       </div>
-      <button class="modal-close is-large" aria-label="close"></button>
+      <!-- <button class="modal-close is-large" aria-label="close"></button> -->
     </div>
 
     <script
