added wiki link to open a new tab

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -82,13 +82,12 @@
                   Movie Title
                 </p>
                 <p class="subtitle wikiParagraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
               </div>
               <footer class="card-footer">
                 <p class="card-footer-item">
                   <span>
-                    Read more on <a href="https://www.wikipedia.org/">Wikipedia</a>
+                    Read more on <a class="wikiHyperLink"">Wikipedia</a>
                   </span>
                 </p>
               </footer>
