styled gamepage so browser doesnt flashbang you

--- a/score-guesser.html
+++ b/score-guesser.html
@@ -16,13 +16,14 @@
 
     <title>Movie Game</title>
   </head>
-
+<body>
+  <header>
   <!-- top navigation -->
-  <nav class="breadcrumb is-centered has-bullet-separator is-medium" aria-label="breadcrumbs">
+  <nav class="is-centered" >
     <ul>
       <li>
         <a href="index.html">
-          <span class="icon is-small">
+          <span class="icon is-small is-dark">
             <i class="fas fa-home" aria-hidden="true"></i>
           </span>
           <span>Home</span>
@@ -36,18 +37,18 @@
           <span>GitHub</span>
         </a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#">
           <span class="icon is-small">
             <i class="fas fa-puzzle-piece" aria-hidden="true"></i>
           </span>
           <span>Share My Score</span>
         </a>
-      </li>
+      </li> -->
     </ul>
   </nav>
-
-  <body>
+  </header>
+  
     <section class="section">
       <div class="container">
         <div class="columns">
@@ -87,7 +88,7 @@
               <footer class="card-footer">
                 <p class="card-footer-item">
                   <span>
-                    Read more on <a class="wikiHyperLink"">Wikipedia</a>
+                    Read more on <a class="wikiHyperLink">Wikipedia</a>
                   </span>
                 </p>
               </footer>
@@ -105,7 +106,7 @@
               <footer class="card-footer">
                 <p class="card-footer-item">
                   <!-- Submit Button -->
-                  <button class="submit-btn button is-danger is-outlined is-medium is-fullwidth">Submit</button>
+                  <button class="submit-btn button is-success is-outlined is-medium is-fullwidth">Submit</button>
                 </p>
               </footer>
             </div>
@@ -128,7 +129,7 @@
       </div>
       <!-- <button class="modal-close is-large" aria-label="close"></button> -->
     </div>
-
+  </body>
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
