--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
             </div>            
         </div>  
         <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script> 
-        <script src="./assets/script.js"></script>             
+        <script src="script.js"></script>             
      </body>
      </html>
