--- a/score-guesser.html
+++ b/score-guesser.html
@@ -135,7 +135,7 @@
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/script.js"></script>
+    <script src="script.js"></script>
     <!-- Fontawesome navbar logos -->
     <script src="https://kit.fontawesome.com/54031de401.js" crossorigin="anonymous"></script>
   </body>
